--- a/Forum.entitlements
+++ b/Forum.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.andforce.Crsky</string>
+		<string>iCloud.com.andforce.forum</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
