--- a/Info.plist
+++ b/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>41</string>
+	<string>42</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
@@ -36,9 +36,9 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>是否允许此App使用你的相机</string>
+	<string>为了方便您回帖时候可以发送您拍摄的照片，请允许我们使用您的相机</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>是否允许此App使用你的相册</string>
+	<string>为了方便您回帖时候可以发送相片，请允许我们使用您的相册</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
